# Brain_Disorder_Simulation_Engine

./: .gitignore  CHANGELOG.md  CLINICAL_READINESS_CHECKLIST.md  COLD_HARD_TRUTH.md  COMMERCIAL_DEPLOYMENT_ANALYSIS.md  COMPLETENESS_ANALYSIS.md  CRITICAL_ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READINESS_CHECK.md  ENGINE_CAPABILITIES.md  GITHUB_DEPLOYMENT_FINAL.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_DEPLOYMENT_SUMMARY.md  GITHUB_READINESS_REPORT.md  GITHUB_REPOSITORY_DESCRIPTION.md  GITHUB_UPLOAD_GUIDE.md  HANDOVER_DOCUMENT.md  IMPROVEMENTS_APPLIED.md  INSTALLATION.md  LEGAL_DISCLAIMER.md  LOOP_MODULARIZATION_ROADMAP.md  MANIFEST.in  MEDICAL_READINESS_ANALYSIS.md  PHAM_BLOCKCHAIN_SIGNATURE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  POTENTIAL_IMPROVEMENTS.md  PROJECT_STATUS_REPORT.md  PROJECT_STRUCTURE_GUIDE.md  README.md  README_UPDATE_CHECK.md  README_VERIFICATION.md  REGULATORY_MAPPING.md  RELEASE_NOTES_v1.0.0.md  REMAINING_WORK.md  RUN_INSTRUCTIONS.md  __init__.py  adhd_engines.py  adhd_simulator.py  (+29 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-package.yml
adhd_simulation/: __init__.py
adhd_simulation/core/: __init__.py  adhd_simulator.py  depression_engines.py  depression_simulator.py  dopamine_system.py
adhd_simulation/medical/: __init__.py  validation_study.py
adhd_simulation/utils/: __init__.py  report_generator.py
brain_disorder_simulation/: __init__.py
brain_disorder_simulation/alpha/: adhd_controlled_episode.py  alpha_brain_runner.py  controller_spec.py  evaluation_layer_v1.py  self_regulation_controller.py
brain_disorder_simulation/common/: __init__.py  (+3 more)
docs/: README.md
test_output/: test_report_report.json  test_report_report.md
(+57 files in other folders)
